--- a/DesignAssignment/css/style.css
+++ b/DesignAssignment/css/style.css
@@ -36,10 +36,20 @@
 .col3-left-container ul li a{
     color: white;
 }
-.first-col-2-left-img ul li {
+
+.first-col-2-right-img ul li {
     float: left;
+    width: 25%;
 }
-.first-col-2-left-name ul li{
-    float: left;
-    padding: 0 75px;
+
+.first-col3-left-container{
+    padding: 5px 0;
+}
+.first-col2-left-container{
+    padding: 5px 0px;
+    
+}
+.first-col2-right-container{
+    padding: 0px 2px;
+   
 }
