--- a/DesignAssignmentFinalStatic/css/layout.css
+++ b/DesignAssignmentFinalStatic/css/layout.css
@@ -7,7 +7,7 @@ header{
     margin: 0 auto;
 }
 .header-top{
-    background-image: url("/images/Navbar\ Panel.png");
+    background-color: black;
     padding-top: 26px;
     padding-bottom: 16px;
     color: #b0b0b0;
@@ -92,7 +92,7 @@ header{
     
 }
 .header-bottom-right .title{
-    background-image: url("/images/card_header_u257\ \(1\).png");
+    background-image: url("../images/card_header257.png");
     padding-top: 20px;
     padding-bottom: 16px;
     
@@ -234,7 +234,7 @@ header{
     width: 476px;
 }
 .sub-list-section-title .sub-list-section-title-download-image{
-    /* background-image: url("/images/list_icon_upload_u127.png")  no-repeat; */
+    /* background-image: url("./images/list_icon_upload_u127.png")  no-repeat; */
     width: 52px;
     height: 44px;
 }
@@ -311,7 +311,7 @@ header{
 
 /* 2ndlast */
 .stylish{
-    background-image: url("/images/u25_state0.png");
+    background-image: url("../images/u25_state0.png");
     padding-top: 76px;
     padding-bottom: 63px;
     text-align: center;
