--- a/DesignAssignmentFinalStatic/css/reset.css
+++ b/DesignAssignmentFinalStatic/css/reset.css
@@ -2,6 +2,10 @@
     margin: 0;
     padding: 0;
 }
+.img{
+    display: block;
+    width: 100%;
+}
 .clearfix::after {
     content: "";
     clear: both;
