--- a/DesignAssignmentFinalStatic/css/layout.css
+++ b/DesignAssignmentFinalStatic/css/layout.css
@@ -3,7 +3,7 @@ header{
    min-width: 1129px;
 }
 .container{
-    width: 1129px;
+    width: 1197px;
     margin: 0 auto;
 }
 .header-top{
@@ -134,9 +134,6 @@ header{
 .social-media .heading p {
     line-height: 30px;
     width: 369px;
-    
-    /* padding-top: 24px;
-    padding-bottom: 23px; */
 }
 
 .social-media .social-media-icon{
@@ -368,8 +365,18 @@ header{
 }
 
 /* 8th */
+.list-section{
+    background-color: #f5f5f5;
+    padding-bottom: 98px;
+}
 .list-all{
-    width: 342px;
+    float: left;
+    width: 302px;
+    margin-right: 40px;
+}
+
+.list-all:not(:last-of-type){
+    margin-left: 0px;
 }
 .list-all .price , .list-all .basic{
     background-color: black;
@@ -381,13 +388,44 @@ header{
     padding-top: 22px;
     padding-bottom: 22px;
 }
-.list-all .price {
+.list-all .price h1{
     padding-top: 29px;
     padding-bottom: 29px;
 }
-.list-all .text-list ul li{
-    list-style: none;
+.list-all .hover-text h3{
+    display: none;
 }
+.list-all .hover-text:hover h3{
+    line-height: 40px;
+    display: block;
+}
+.list-all .hover-text{
+    background-color: #fff;
+    border-bottom: 5px orange solid;
+    text-align: center;
+    display: block;
+
+}
+.list-all .hover-text:hover {
+    text-align: center;
+    display: block; 
+    background-color: orange;
+    color: white;
+    height: 40px;
+}
+.list-all .price p{
+    padding-bottom: 20px;
+}
+.list-all .text-list ul li{
+    text-align: center;
+    list-style: none;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    background-color: #fff;
+    border-bottom: 1px #f5f5f5 solid;
+
+}
+
 /* 9th */
 .customer .customer-container {
     text-align: center;
@@ -554,3 +592,29 @@ header{
     width: 147px;    
     cursor: pointer;
 }
+
+/* footer */
+
+.footer{
+    background-color:black;
+    color: white;
+    text-align: center;
+}
+
+.footer .social-media-icon ul{
+    margin-left: 380px;
+    margin-top: 80px;
+}
+
+.footer .social-media-icon ul li{
+    list-style: none;
+    padding-right: 25px;
+    margin-top: 21px;
+    
+    float: left;
+}
+ .date{
+    margin-top: 15px;
+    padding-bottom: 15px;
+}
+
