--- a/DesignAssignmentFinalStatic/css/layout.css
+++ b/DesignAssignmentFinalStatic/css/layout.css
@@ -58,7 +58,7 @@ header{
     padding-top: 25px;
     padding-bottom: 20px;;
     color: #77797d;
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
 .header-bottom-left .button input{
     outline: none;
@@ -68,6 +68,7 @@ header{
     display: block;
     height: 50px ;  
     cursor: pointer; 
+    font-family: 'Open Sans', sans-serif;
 
 }
 
@@ -93,9 +94,11 @@ header{
 .header-bottom-right .title h2{
     margin-left: 39px;  
     margin-right: 56px;
+    font-family: 'Raleway', sans-serif;
 }
 .header-bottom-right .title h2 span{
     color: orange;
+    font-family: 'Raleway', sans-serif;
     
 }
 .header-bottom-right .title{
@@ -112,6 +115,7 @@ header{
     display: block;
     height: 50px;
     cursor: pointer;    
+    font-family: 'Open Sans', sans-serif;
 
 }
 
@@ -130,10 +134,12 @@ header{
 }
 .social-media .heading h2{
     padding-bottom: 15px;
+    font-family: 'Raleway', sans-serif;
 }
 .social-media .heading p {
     line-height: 30px;
     width: 369px;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .social-media .social-media-icon{
@@ -164,12 +170,14 @@ header{
     float: left;
     width: 107px;
     margin-right:102px ;
+    font-family: 'Raleway', sans-serif;
     
 }
 
 .transition .tabs .tab1 {
     padding-top: 48px;
     padding-bottom: 48px;
+    font-family: 'Raleway', sans-serif;
    
 }
 
@@ -203,7 +211,7 @@ header{
 }
 
 .main-block-left .heading h2{
-    
+    font-family: 'Raleway', sans-serif;
     padding-top: 13px;
     padding-bottom: 25px;
     text-align: center;
@@ -214,6 +222,7 @@ header{
     width: 513px;
     padding-bottom: 56px;
     color: #77797d;
+    font-family: 'Open Sans', sans-serif;
 }
 .main-block-left .button input{
     margin-top: 26px;
@@ -249,6 +258,7 @@ header{
 
 .sub-list-section .heading{
     padding-bottom: 33px;
+    font-family: 'Raleway', sans-serif;
 }
 .sub-list-section  .divider{
     padding-bottom: 31px;
@@ -260,6 +270,7 @@ header{
 .sub-list-section p{
     padding-bottom: 49px;
     width: 476px;
+    font-family: 'Open Sans', sans-serif;
 }
 
 
@@ -294,6 +305,7 @@ header{
 
 .stander-picture .heading{
     padding-bottom: 31px;
+    font-family: 'Raleway', sans-serif;
 }
 
 
@@ -305,6 +317,7 @@ header{
 .stander-picture p{
     padding-bottom: 32px;
     width: 481px;
+    font-family: 'Open Sans', sans-serif;
 }
 
 /* 5th */
@@ -323,6 +336,7 @@ header{
 }
 .awesome .awesome-container p{ 
    width: 414px;
+   font-family: 'Open Sans', sans-serif;
 }
 
 /* 6th */
@@ -334,11 +348,13 @@ header{
 .why-this-awesome p{
     line-height: 26px;
     padding-bottom: 107px;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .center .heading{ 
     padding-top: 29px;
     padding-bottom: 24px;
+    font-family: 'Raleway', sans-serif;
     
 }
 
@@ -362,6 +378,7 @@ header{
 }
 .pricing .pricing-container p{ 
    width: 414px;
+   font-family: 'Open Sans', sans-serif;
 }
 
 /* 8th */
@@ -391,11 +408,14 @@ header{
 .list-all .price h1{
     padding-top: 29px;
     padding-bottom: 29px;
+    font-family: 'Raleway', sans-serif;
 }
 .list-all .hover-text h3{
+    font-family: 'Raleway', sans-serif;
     display: none;
 }
 .list-all .hover-text:hover h3{
+    font-family: 'Raleway', sans-serif;
     line-height: 40px;
     display: block;
 }
@@ -415,6 +435,7 @@ header{
 }
 .list-all .price p{
     padding-bottom: 20px;
+    font-family: 'Open Sans', sans-serif;
 }
 .list-all .text-list ul li{
     text-align: center;
@@ -442,6 +463,7 @@ header{
 }
 .customer .customer-container p{ 
    width: 414px;
+   font-family: 'Open Sans', sans-serif;
 }
 
 
@@ -453,6 +475,7 @@ header{
     padding-bottom: 14px;
     background-color: #f5f5f5;
     width: 215px;
+    font-family: 'Open Sans', sans-serif;
 }
 .left-container img{
     margin-left: 27PX; 
@@ -499,10 +522,12 @@ header{
    width: 538px;
    text-align: center;
    padding-left: 325px;
+   font-family: 'Open Sans', sans-serif;
 }
 
 .stylish .heading h1{
-    display:block
+    display:block;
+    font-family: 'Raleway', sans-serif;
 }
 .stylish .heading{
     margin-top: 45px;
@@ -514,6 +539,7 @@ header{
     padding-top: 25px;
     padding-bottom: 20px;
     color: #77797d;
+    font-family: 'Open Sans', sans-serif;
 }
 .stylish .button{
     padding-left: 503px;
@@ -616,5 +642,6 @@ header{
  .date{
     margin-top: 15px;
     padding-bottom: 15px;
+    font-family: 'Raleway', sans-serif;
 }
 
