--- a/DesignAssignmentFinalResponsive/css/layout.css
+++ b/DesignAssignmentFinalResponsive/css/layout.css
@@ -3,7 +3,7 @@ header{
    min-width: 1129px;
 }
 .container{
-    width: 1197px;
+    width: 75em;
     margin: 0 auto;
 }
 .header-top{
@@ -36,7 +36,7 @@ header{
 }
 .header-bottom-left {
     float: left;
-    width: 513px;
+    width: 42.75%;
    
 }
 /* .header-bottom-left .heading h2{
@@ -54,7 +54,7 @@ header{
     color: #ffffff;
 }
 .header-bottom-left p{
-    width: 513px;
+    width: 42.75%;
     padding-top: 25px;
     padding-bottom: 20px;;
     color: #77797d;
@@ -138,7 +138,7 @@ header{
 }
 .social-media .heading p {
     line-height: 30px;
-    width: 369px;
+    width: 30.75%;
     font-family: 'Open Sans', sans-serif;
 }
 
@@ -168,7 +168,7 @@ header{
 
 .transition .tabs  {
     float: left;
-    width: 107px;
+    width: 8.9167%;
     margin-right:102px ;
     font-family: 'Raleway', sans-serif;
     
@@ -201,13 +201,13 @@ header{
 }                        
 .main-block-left{
     float: left;
-    width: 557px;
+    width: 46.4167%;
     
 }
 
 .main-block-right{
     float: right;
-    width: 318px;  
+    width: 26.5%;  
 }
 
 .main-block-left .heading h2{
@@ -219,7 +219,7 @@ header{
 }
 .main-block-left p{
     display: block;
-    width: 513px;
+    width: 42.75%;
     padding-bottom: 56px;
     color: #77797d;
     font-family: 'Open Sans', sans-serif;
@@ -243,12 +243,12 @@ header{
 }
 .sublist-image{
     float: left;
-    width: 480px;
+    width: 40.0833%;
     margin-right: 173px;
 }
 .sub-list-section{
     float: right;
-    width: 476px;
+    width: 39.6667%;
 }
 .sub-list-section-title .sub-list-section-title-download-image{
     /* background-image: url("./images/list_icon_upload_u127.png")  no-repeat; */
@@ -269,7 +269,7 @@ header{
 }
 .sub-list-section p{
     padding-bottom: 49px;
-    width: 476px;
+    width: 39.3337%;
     font-family: 'Open Sans', sans-serif;
 }
 
@@ -281,26 +281,26 @@ header{
 
 .sub-list-section-title .sub-list-section-title-paragraph{
     float: right;
-    width: 361px;
+    width: 30.0833%;
 }
 
 .sub-list-section-title .sub-list-section-title-paragraph p{
-    width: 361px;
+    width: 30.0833%;
 }
 
 /* 4th */
 .stander-picture{
     background-color: #f3f3f3;
-    padding-top: 109px;
+    padding-top: 9.08333%;
 }
 .stander-picture-section{
     float: left;
-    width: 482px;
+    width: 440.167%;
     margin-right: 121px;
 }
 .stander-picture-image{
     float: right;
-    width: 457px;
+    width: 38.0833%;
 }
 
 .stander-picture .heading{
@@ -316,33 +316,33 @@ header{
 
 .stander-picture p{
     padding-bottom: 32px;
-    width: 481px;
+    width: 0.40083%;
     font-family: 'Open Sans', sans-serif;
 }
 
 /* 5th */
 .awesome .awesome-container {
     text-align: center;
-    width: 414px;
+    width: 34.5%;
     padding-top: 108px;
     padding-bottom: 83px;
     padding-right: 335px;
     margin-left: 339px;
 }
 .awesome .awesome-container .divider{ 
-    width: 414px;
+    width: 34.5%;
     padding-top: 30px;
     padding-bottom: 30px;
 }
 .awesome .awesome-container p{ 
-   width: 414px;
+   width: 34.5%;
    font-family: 'Open Sans', sans-serif;
 }
 
 /* 6th */
 .why-this-awesome .center{
     text-align: center;
-    width: 355px;
+    width: 29.58%;
     float: left;
 }
 .why-this-awesome p{
@@ -365,19 +365,19 @@ header{
 }
 .pricing .pricing-container {
     text-align: center;
-    width: 414px;
+    width: 34.5%;
     padding-top: 108px;
     padding-bottom: 83px;
     padding-right: 335px;
     margin-left: 339px;
 }
 .pricing .pricing-container .divider{ 
-    width: 414px;
+    width: 34.5%;
     padding-top: 30px;
     padding-bottom: 30px;
 }
 .pricing .pricing-container p{ 
-   width: 414px;
+   width: 34.5%;
    font-family: 'Open Sans', sans-serif;
 }
 
@@ -388,7 +388,7 @@ header{
 }
 .list-all{
     float: left;
-    width: 302px;
+    width: 25.1667;
     margin-right: 40px;
 }
 
@@ -450,19 +450,19 @@ header{
 /* 9th */
 .customer .customer-container {
     text-align: center;
-    width: 414px;
+    width: 34.5%;
     padding-top: 108px;
     padding-bottom: 83px;
     padding-right: 335px;
     margin-left: 339px;
 }
 .customer .customer-container .divider{ 
-    width: 414px;
+    width: 34.5%;
     padding-top: 30px;
     padding-bottom: 30px;
 }
 .customer .customer-container p{ 
-   width: 414px;
+   width: 34.5%;
    font-family: 'Open Sans', sans-serif;
 }
 
@@ -474,7 +474,7 @@ header{
     padding-top: 14px;
     padding-bottom: 14px;
     background-color: #f5f5f5;
-    width: 215px;
+    width: 17.9167%;
     font-family: 'Open Sans', sans-serif;
 }
 .left-container img{
@@ -482,7 +482,7 @@ header{
 }
 .customer-paragraph .left-container{
     float: left;
-    width: 215px;
+    width: 17.9167%;
     margin-right: 112px;
 }
 .customer-paragraph .left-container:not(:last-of-type){
@@ -492,20 +492,20 @@ header{
 
 /* 11th */
 .customer-container-image{
-    width: 275px;
+    width: 22.91667%;
 }
 .customer-container-image .image{
     float: left;
-    width: 82px;
+    width: 6.8333%;
 }
 .customer-container-image .name{
     float: left;
-    width: 100px;
+    width: 8.333%;
 }
 
 .customer-container-image{
     float: left;
-    width: 275px;
+    width: 22.1967%;
     margin-right: 64px;  
 }
 
@@ -519,7 +519,7 @@ header{
     
 }
 .stylish .stylish-container p{
-   width: 538px;
+   width: 44.8333%;
    text-align: center;
    padding-left: 325px;
    font-family: 'Open Sans', sans-serif;
@@ -559,7 +559,7 @@ header{
 .contact-us .contact-us-container {
     text-align: center;  
     padding-top: 108px;
-    width: 414px;   
+    width: 34.5%;   
     margin-left: 339px;
 }
 .contact-us .contact-us-container .divider{ 
@@ -589,7 +589,7 @@ header{
 }
 
 .contact-us-form .main-form .form-left input{
-    width: 530px;
+    width: 44.1667%;
 }
 
 
@@ -599,7 +599,7 @@ header{
 
 }
 .contact-us-form .main-form .form-right input{
-    width: 526px;
+    width: 43.88%;
     padding-bottom: 144px;
 
 }
@@ -615,7 +615,7 @@ header{
     background-color:orange;
     display: block;
     height: 50px ;
-    width: 147px;    
+    width: 12.25%;    
     cursor: pointer;
 }
 
