--- a/DesignAssignmentFinalResponsive/css/layout.css
+++ b/DesignAssignmentFinalResponsive/css/layout.css
@@ -1,9 +1,11 @@
 header{
     background-image: url("../images/headerbackground.png");
-   min-width: 1129px;
+   /* min-width: 1129px; */
+   width: 100%;
 }
 .container{
-    width: 75em;
+    width: 85.71%;
+    /* width: 75em; */
     margin: 0 auto;
 }
 .header-top{
@@ -15,9 +17,11 @@ header{
 
 .header-top .logo{
     float: left;
+    width: 50%;
 }
 .header-top .navbar{
     float: right;
+    width: 50%;
 }
 .header-top .navbar ul li{
     float: left;
@@ -36,7 +40,8 @@ header{
 }
 .header-bottom-left {
     float: left;
-    width: 42.75%;
+    /* width: 42.75%; */
+    width: 50%;
    
 }
 /* .header-bottom-left .heading h2{
@@ -74,7 +79,8 @@ header{
 
 /* header-bottom-right */
 .header-bottom-right{
-    float: right;
+    float: left;
+    width: 50%;
 }
 
 .header-bottom-right .form{
@@ -129,6 +135,7 @@ header{
 }
 .social-media .heading {
     float: left;
+    width: 50%;
     padding-top: 24px;
     padding-bottom: 23px;
 }
@@ -144,7 +151,7 @@ header{
 
 .social-media .social-media-icon{
     float: right;
-  
+    width: 50%;
 }
 .social-media .social-media-icon ul li{
     float: left;
@@ -168,7 +175,8 @@ header{
 
 .transition .tabs  {
     float: left;
-    width: 8.9167%;
+    width: 10%;
+    /* width: 8.9167%; */
     margin-right:102px ;
     font-family: 'Raleway', sans-serif;
     
@@ -197,18 +205,23 @@ header{
 
 /* 2nd (2nd) */
 .main-block{
-    float: right;
+    float: left;
+    width: 80%;
 }                        
 .main-block-left{
     float: left;
-    width: 46.4167%;
+    /* width: 46.4167%; */
+    width: 50%;
     
 }
 
 .main-block-right{
-    float: right;
-    width: 26.5%;  
+    float: left;
+    /* float: right; */
+    width: 50%;
+    /* width: 26.5%;   */
 }
+
 
 .main-block-left .heading h2{
     font-family: 'Raleway', sans-serif;
@@ -238,17 +251,30 @@ header{
 
 /* 3rd */
 .sub-list{
+    width: 100%;
     padding-top: 107px;
     padding-bottom: 139px;
 }
+
 .sublist-image{
     float: left;
-    width: 40.0833%;
-    margin-right: 173px;
+    width: 20%;
+    /* width: 100%; */
+    /* width: 40.0833%; */
+    /* margin-right: 173px; */
+}
+.sub-list-section-main{
+    width: 90%;
+}
+.sub-list-section-title-container-bottom{
+    float: left;
+    width: 25%;
 }
 .sub-list-section{
     float: right;
-    width: 39.6667%;
+    width: 25%;
+    /* margin-left: 10px; */
+    /* width: 39.6667%; */
 }
 .sub-list-section-title .sub-list-section-title-download-image{
     /* background-image: url("./images/list_icon_upload_u127.png")  no-repeat; */
@@ -272,35 +298,56 @@ header{
     width: 39.3337%;
     font-family: 'Open Sans', sans-serif;
 }
-
-
-.sub-list-section-title .sub-list-section-title-download-image{
+/* .sublist-section-title-container-top{
     float: left;
+    width: 50%;
+} */
+.sublist-section-title-container-bottom{
+    float: right;
+    width: 20%;
+}
+.sub-list-section-title{
+    float: left;
+    width: 50% ;
+}
+
+.sub-list-section-title .sublist-section-title-container-top .sub-list-section-title-download-image{
+    float: left;
+    width: 200%;
    
 }
 
-.sub-list-section-title .sub-list-section-title-paragraph{
-    float: right;
-    width: 30.0833%;
+.sub-list-section-title .sublist-section-title-container-bottom .sub-list-section-title-paragraph{
+    width: 20%;
+    float: left;
+    /* width: 30.0833%; */
 }
 
 .sub-list-section-title .sub-list-section-title-paragraph p{
-    width: 30.0833%;
+    /* width: 30.0833%; */
+    float:;
+    width: 40%;
 }
 
 /* 4th */
+.stander-picture-section-image{
+    width: 50%;
+    float: right;
+}
 .stander-picture{
     background-color: #f3f3f3;
     padding-top: 9.08333%;
 }
 .stander-picture-section{
     float: left;
-    width: 440.167%;
-    margin-right: 121px;
+    width: 50%;
+    /* width: 440.167%; */
+    /* margin-right: 121px; */
 }
 .stander-picture-image{
     float: right;
-    width: 38.0833%;
+    /* width: 40%; */
+    /* width: 38.0833%; */
 }
 
 .stander-picture .heading{
@@ -316,33 +363,40 @@ header{
 
 .stander-picture p{
     padding-bottom: 32px;
-    width: 0.40083%;
+    width: 20%;
     font-family: 'Open Sans', sans-serif;
 }
 
 /* 5th */
 .awesome .awesome-container {
     text-align: center;
-    width: 34.5%;
+    width: 100%;
+    /* width: 34.5%; */
     padding-top: 108px;
     padding-bottom: 83px;
     padding-right: 335px;
-    margin-left: 339px;
+    /* margin-left: 339px; */
 }
 .awesome .awesome-container .divider{ 
-    width: 34.5%;
+    width: 100%;
     padding-top: 30px;
     padding-bottom: 30px;
+    text-align: center;
 }
 .awesome .awesome-container p{ 
-   width: 34.5%;
+   width: 100%;
    font-family: 'Open Sans', sans-serif;
 }
 
 /* 6th */
+.center{
+    float: left;
+    width: 100%;
+}
 .why-this-awesome .center{
     text-align: center;
-    width: 29.58%;
+    width: 100%;
+    /* width: 29.58%; */
     float: left;
 }
 .why-this-awesome p{
@@ -357,6 +411,10 @@ header{
     font-family: 'Raleway', sans-serif;
     
 }
+.why-this-awesome-container
+{
+    width: 100%;
+}
 
 
 /* 7th */
@@ -365,19 +423,20 @@ header{
 }
 .pricing .pricing-container {
     text-align: center;
-    width: 34.5%;
+    width: 100%;
+    /* width: 34.5%; */
     padding-top: 108px;
     padding-bottom: 83px;
-    padding-right: 335px;
-    margin-left: 339px;
+    /* padding-right: 335px; */
+    /* margin-left: 339px; */
 }
 .pricing .pricing-container .divider{ 
-    width: 34.5%;
+    width: 100%;
     padding-top: 30px;
     padding-bottom: 30px;
 }
 .pricing .pricing-container p{ 
-   width: 34.5%;
+   width: 100%;
    font-family: 'Open Sans', sans-serif;
 }
 
@@ -388,13 +447,14 @@ header{
 }
 .list-all{
     float: left;
-    width: 25.1667;
+    width: 25%;
+    /* width: 25.1667; */
     margin-right: 40px;
 }
 
-.list-all:not(:last-of-type){
+/* .list-all:not(:last-of-type){
     margin-left: 0px;
-}
+} */
 .list-all .price , .list-all .basic{
     background-color: black;
     color: white;
@@ -448,21 +508,26 @@ header{
 }
 
 /* 9th */
+customer {
+    text-align: center;
+}
+
 .customer .customer-container {
     text-align: center;
-    width: 34.5%;
+    width: 100%;
+    /* width: 34.5%; */
     padding-top: 108px;
     padding-bottom: 83px;
-    padding-right: 335px;
-    margin-left: 339px;
+    /* padding-right: 335px;
+    margin-left: 339px; */
 }
 .customer .customer-container .divider{ 
-    width: 34.5%;
+    width: 100%;
     padding-top: 30px;
     padding-bottom: 30px;
 }
 .customer .customer-container p{ 
-   width: 34.5%;
+   width: 100%;
    font-family: 'Open Sans', sans-serif;
 }
 
@@ -474,25 +539,27 @@ header{
     padding-top: 14px;
     padding-bottom: 14px;
     background-color: #f5f5f5;
-    width: 17.9167%;
+    width: 33.33%;
+    /* width: 17.9167%; */
     font-family: 'Open Sans', sans-serif;
 }
-.left-container img{
+/* .left-container img{
     margin-left: 27PX; 
-}
+} */
 .customer-paragraph .left-container{
     float: left;
     width: 17.9167%;
-    margin-right: 112px;
+    /* margin-right: 112px; */
 }
 .customer-paragraph .left-container:not(:last-of-type){
-    margin-left: 0px;
+    /* margin-left: 0px; */
 }
 
 
 /* 11th */
 .customer-container-image{
-    width: 22.91667%;
+    /* width: 22.91667%; */
+    width: 33.33%;
 }
 .customer-container-image .image{
     float: left;
@@ -506,10 +573,10 @@ header{
 .customer-container-image{
     float: left;
     width: 22.1967%;
-    margin-right: 64px;  
+    /* margin-right: 64px;   */
 }
 
-/* 2ndlast */
+/* 12th */
 .stylish{
     background-image: url("../images/u25_state0.png");
     padding-top: 76px;
@@ -518,10 +585,13 @@ header{
     margin-top: 96px;
     
 }
+.stylish .stylish-container{
+    width: 100%;
+}
 .stylish .stylish-container p{
-   width: 44.8333%;
+   width: 100%;
    text-align: center;
-   padding-left: 325px;
+   /* padding-left: 325px; */
    font-family: 'Open Sans', sans-serif;
 }
 
@@ -555,20 +625,30 @@ header{
     cursor: pointer;
 
 }
-/* LAST */
+/* 13th */
+.contact-us{
+    text-align: center;
+}
 .contact-us .contact-us-container {
-    text-align: center;  
+    /* text-align: center;   */
     padding-top: 108px;
-    width: 34.5%;   
-    margin-left: 339px;
+    width: 100%;
+    /* width: 34.5%;    */
+    /* margin-left: 339px; */
 }
 .contact-us .contact-us-container .divider{ 
     padding-top: 30px;
     padding-bottom: 30px;
 }
+.contact-us .contact-us-container .p{ 
+    width: 80%;
+}
 
 
-
+/* 14th */
+.contact-us-form .main-form {
+    width: 100%;
+}
 .contact-us-form .main-form .form{
     background-color: #fff;
     padding-bottom: 43px;
@@ -579,12 +659,17 @@ header{
     border-bottom: 1px solid grey;
     padding-top: 42px;
     padding-bottom: 10px;
-    margin: 0 auto;
+    /* margin: 0 auto; */
     cursor: pointer;
+}
+.button{
+    width: 100%;
+    text-align: center;
 }
 
 .contact-us-form .main-form .form-left{
     float: left;
+    width: 50%;
    
 }
 
@@ -595,6 +680,7 @@ header{
 
 .contact-us-form .main-form .form-right{
     float: right;
+    width: 50%;
    
 
 }
@@ -604,10 +690,7 @@ header{
 
 }
 
-.contact-us .button {
-    padding-left: 485px;    
 
-} 
 .contact-us .button input{
    
     outline: none;
@@ -620,19 +703,21 @@ header{
 }
 
 /* footer */
-
+.footer-container{
+    width: 100%;
+}
 .footer{
     background-color:black;
     color: white;
     text-align: center;
 }
 
-.footer .social-media-icon ul{
+.footer .footer-container .social-media-icon ul{
     margin-left: 380px;
     margin-top: 80px;
 }
 
-.footer .social-media-icon ul li{
+.footer .footer-container .social-media-icon ul li{
     list-style: none;
     padding-right: 25px;
     margin-top: 21px;
